--- a/saved material/extra/Pauli Matrix/Pauli Matrix.tex
+++ b/saved material/extra/Pauli Matrix/Pauli Matrix.tex
@@ -123,7 +123,17 @@ In particular,
         \boxed{\exp\left[\ii \left(n_i \sigma^i\right)\frac{\theta}{2}\right]=I\cos\frac{\theta}{2}+\ii \left(n_i\sigma^i\right)\sin\frac{\theta}{2}.}
     \end{equation}
 \end{property}
-
+\begin{property}[Projection Operators]
+    Consider 
+    \begin{equation}
+        P_{\pm}=\frac{1}{2}\left(1+\sigma^i n_i\right),
+    \end{equation}
+    we have
+    \begin{equation}
+        \boxed{P_{\pm }^2=P_{\pm}},\ \boxed{(\sigma^i n_i)\, P_{\pm}=\pm P_{\pm}}, \ \boxed{P_+ P_-=P_- P_+=0}.
+    \end{equation}
+    It can used to construct the eigenstates of the Hamiltonian of the form $(\sigma^i n_i)$.
+\end{property}
 
 
 \end{document}
