--- a/fundamental algebra and analysis/fundamental algebra and analysis.tex
+++ b/fundamental algebra and analysis/fundamental algebra and analysis.tex
@@ -52,14 +52,14 @@
 
 
 
-%\include{Chapters/Chapter 1}
-%\include{Chapters/Chapter 2}
-%\include{Chapters/Chapter 3}
-%\include{Chapters/Chapter 4}
-%\include{Chapters/Chapter 5}
-%\include{Chapters/Chapter 6}
-%\include{Chapters/Chapter 7}
-%\include{Chapters/Chapter 8}
+\include{Chapters/Chapter 1}
+\include{Chapters/Chapter 2}
+\include{Chapters/Chapter 3}
+\include{Chapters/Chapter 4}
+\include{Chapters/Chapter 5}
+\include{Chapters/Chapter 6}
+\include{Chapters/Chapter 7}
+\include{Chapters/Chapter 8}
 \include{Chapters/Chapter 9}
 \include{Chapters/Chapter 10}
 
