--- a/saved material/extra/Pauli Matrix/Pauli Matrix.tex
+++ b/saved material/extra/Pauli Matrix/Pauli Matrix.tex
@@ -124,6 +124,7 @@ In particular,
     \end{equation}
 \end{property}
 \begin{property}[Projection Operators]
+    \ \newline
     Consider 
     \begin{equation}
         P_{\pm}=\frac{1}{2}\left(1+\sigma^i n_i\right),
@@ -134,6 +135,33 @@ In particular,
     \end{equation}
     It can used to construct the eigenstates of the Hamiltonian of the form $(\sigma^i n_i)$.
 \end{property}
-
+\begin{property}[Pauli Matrices in different coordinates]
+    \ \newline
+    Choose spherical coordinates as an example. We have
+    \begin{equation}
+        n_i \sigma^i= \begin{pmatrix}
+        \cos \theta& \sin \theta \ee^{-\ii \phi}\\
+         \sin \theta \ee^{\ii \phi}& -\cos \theta
+    \end{pmatrix}.
+    \end{equation}
+    Then we choose $\mathbf{n}$ as $\hat{r}$, $\hat{\theta}$, $\hat{\phi}$. Then we obtain 
+\begin{align}
+    \sigma_r &= 
+    \begin{pmatrix}
+        \cos\theta & \sin\theta \, \ee^{-\ii\phi} \\
+        \sin\theta \, \ee^{\ii\phi} & -\cos\theta
+    \end{pmatrix}, \\[8pt]
+    \sigma_\theta &= 
+    \begin{pmatrix}
+        -\sin\theta & \cos\theta \, \ee^{-\ii\phi} \\
+        \cos\theta \, \ee^{\ii\phi} & \sin\theta
+    \end{pmatrix}, \\[8pt]
+    \sigma_\phi &= 
+    \begin{pmatrix}
+        0 & -\ii \ee^{-\ii\phi} \\
+        \ii \ee^{\ii\phi} & 0
+    \end{pmatrix}.
+\end{align}
+\end{property}
 
 \end{document}
