--- a/Quantum Mechanics/Quantum Mechanics Technology Processing and Conclusions/Quantum Mechanics Technology Processing and Conclusions.tex
+++ b/Quantum Mechanics/Quantum Mechanics Technology Processing and Conclusions/Quantum Mechanics Technology Processing and Conclusions.tex
@@ -1,6 +1,6 @@
 \documentclass{article}
 \newcommand{\singleline}{\hrule height 0.8pt}
-\newcommand{\mydate}{Otctober 2, 2025 - \today}
+\newcommand{\mydate}{Otctober 2, 2025 - January 3, 2026}
 \newcommand{\mytitle}{Quantum Mechanics Technology Processing and Conclusions}
 \title{\textbf{\mytitle}}
 \author{Jiete XUE}
@@ -1863,7 +1863,7 @@ So,
 \end{equation}
 Since
 \begin{equation}
-    \bra{n;t}\dot{H}\ket{m;t}=[E_n(t)-E_m(t)]\bra{m;t}\frac{\pa}{\pa t}\ket{n;t},
+    \bra{n;t}\dot{H}\ket{m;t}=[E_n(t)-E_m(t)]\bra{m;t}\frac{\pa}{\pa t}\ket{n;t},\ n\neq m
 \end{equation}
 so,
 \begin{equation}\label{16.70}
@@ -2057,7 +2057,7 @@ Clearly, we can divide the time interval into as many smaller sub-intervals as w
 \section{Scattering Theory}
 There are two lines of thought:
 \begin{enumerate}
-    \item Time-Dependent Scattering Theory – The "Physical Process" Perspective. This method is closer to the physical picture, describing a real dynamical process.
+    \item Time-Dependent Scattering Theory – The ``Physical Process" Perspective. This method is closer to the physical picture, describing a real dynamical process.
     \item Time-Independent (Stationary) Scattering Theory – The "Solve the Equation" Perspective. This is a more streamlined approach, most commonly used in introductory treatments and practical calculations. It is derived from the time-dependent theory in the "monochromatic plane wave" limit.
 \end{enumerate}
 We introduce the stationary scattering theory first.
@@ -2073,7 +2073,7 @@ $f(\theta)$ is the scattering amplitude to be determined. We suppose we have alr
     \psi_{\text{in}}=\ee^{\ii \mathbf{k}\cdot\mathbf{r}} \text{ and } \psi_{\text{sc}}= f(\theta) \cdot\frac{\ee^{\ii k r}}{r}.
 \end{equation}
 
-It is suffice to consider this two part, but not the term of interference. That's because we are interested in the case where $r$ is large enough and $\theta\neq$. When $\theta=0$, two part contribute to the same direction, and we can not neglect the interference.
+It is suffice to consider this two part, but not the term of interference. That's because we are interested in the case where $r$ is large enough and $\theta\neq 0$. When $\theta=0$, two part contribute to the same direction, and we can not neglect the interference.
 
 Use \eqref{10.5} to calculate the probability current,
 \begin{equation}
